library/foundation/include/virgil/crypto/foundation/vscf_compound_key_alg.h

//
//  Handles implementation details.
//
typedef struct vscf_compound_key_alg_t vscf_compound_key_alg_t;
//
//  Allocate implementation context and perform it's initialization.
//  Postcondition: check memory allocation result.
//
VSCF_PUBLIC vscf_compound_key_alg_t *
vscf_compound_key_alg_new(void);
//
//  Delete given implementation context and it's dependencies.
//  This is a reverse action of the function 'vscf_compound_key_alg_new()'.
//
VSCF_PUBLIC void
vscf_compound_key_alg_delete(vscf_compound_key_alg_t *self);
//
//  Setup dependency to the interface 'random' with shared ownership.
//
VSCF_PUBLIC void
vscf_compound_key_alg_use_random(vscf_compound_key_alg_t *self, vscf_impl_t *random);
//
//  Provide algorithm identificator.
//
VSCF_PUBLIC vscf_alg_id_t
vscf_compound_key_alg_alg_id(const vscf_compound_key_alg_t *self);
//
//  Produce object with algorithm information and configuration parameters.
//
VSCF_PUBLIC vscf_impl_t *
vscf_compound_key_alg_produce_alg_info(const vscf_compound_key_alg_t *self);
//
//  Restore algorithm configuration from the given object.
//
VSCF_PUBLIC vscf_status_t
vscf_compound_key_alg_restore_alg_info(vscf_compound_key_alg_t *self, const vscf_impl_t *alg_info) VSCF_NODISCARD;
//
//  Generate ephemeral private key of the same type.
//  Note, this operation might be slow.
//
VSCF_PUBLIC vscf_impl_t *
vscf_compound_key_alg_generate_ephemeral_key(const vscf_compound_key_alg_t *self, const vscf_impl_t *key, vscf_error_t *error);
//
//  Import public key from the raw binary format.
//
//  Return public key that is adopted and optimized to be used
//  with this particular algorithm.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA public key must be imported from the format defined in
//  RFC 3447 Appendix A.1.1.
//
VSCF_PUBLIC vscf_impl_t *
vscf_compound_key_alg_import_public_key(const vscf_compound_key_alg_t *self, const vscf_raw_public_key_t *raw_key, vscf_error_t *error);
//
//  Import public key from the raw binary format.
//
VSCF_PUBLIC vscf_impl_t *
vscf_compound_key_alg_import_public_key_data(const vscf_compound_key_alg_t *self, vsc_data_t key_data, const vscf_impl_t *key_alg_info, vscf_error_t *error);
//
//  Export public key to the raw binary format.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA public key must be exported in format defined in
//  RFC 3447 Appendix A.1.1.
//
VSCF_PUBLIC vscf_raw_public_key_t *
vscf_compound_key_alg_export_public_key(const vscf_compound_key_alg_t *self, const vscf_impl_t *public_key, vscf_error_t *error);
//
//  Return length in bytes required to hold exported public key.
//
VSCF_PUBLIC size_t
vscf_compound_key_alg_exported_public_key_data_len(const vscf_compound_key_alg_t *self, const vscf_impl_t *public_key);
//
//  Export public key to the raw binary format without algorithm information.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA public key must be exported in format defined in
//  RFC 3447 Appendix A.1.1.
//
VSCF_PUBLIC vscf_status_t
vscf_compound_key_alg_export_public_key_data(const vscf_compound_key_alg_t *self, const vscf_impl_t *public_key, vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Import private key from the raw binary format.
//
//  Return private key that is adopted and optimized to be used
//  with this particular algorithm.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA private key must be imported from the format defined in
//  RFC 3447 Appendix A.1.2.
//
VSCF_PUBLIC vscf_impl_t *
vscf_compound_key_alg_import_private_key(const vscf_compound_key_alg_t *self, const vscf_raw_private_key_t *raw_key, vscf_error_t *error);
//
//  Import private key from the raw binary format.
//
VSCF_PUBLIC vscf_impl_t *
vscf_compound_key_alg_import_private_key_data(const vscf_compound_key_alg_t *self, vsc_data_t key_data, const vscf_impl_t *key_alg_info, vscf_error_t *error);
//
//  Export private key in the raw binary format.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA private key must be exported in format defined in
//  RFC 3447 Appendix A.1.2.
//
VSCF_PUBLIC vscf_raw_private_key_t *
vscf_compound_key_alg_export_private_key(const vscf_compound_key_alg_t *self, const vscf_impl_t *private_key, vscf_error_t *error);
//
//  Return length in bytes required to hold exported private key.
//
VSCF_PUBLIC size_t
vscf_compound_key_alg_exported_private_key_data_len(const vscf_compound_key_alg_t *self, const vscf_impl_t *private_key);